fixed spacings

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -94,7 +94,7 @@ div.card-panel.card{
 }
 
 #target {
-  margin-left: 7.5em;
+  margin-left: 4em;
 }
 
 /*Destinations*/
